force-app/main/default/objects/DispatchDetail__c/DispatchDetail__c.object-meta.xml
<CustomObject>
    <label>配車明細</label>
    <nameField>
        <displayFormat>DED-{00000000}</displayFormat>
        <label>配車明細#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>