force-app/main/default/objects/DispatchDetail__c/fields/AccountName_F__c.field-meta.xml
<CustomField>
    <fullName>AccountName_F__c</fullName>
    <formula>OrderHeader__r.Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>荷主名</label>
    <type>Text</type>
</CustomField>