force-app/main/default/objects/DispatchDetail__c/fields/CharteredVehicleNumber__c.field-meta.xml
<CustomField>
    <fullName>CharteredVehicleNumber__c</fullName>
    <label>下請け車番</label>
    <length>255</length>
    <type>Text</type>
</CustomField>