force-app/main/default/objects/DispatchDetail__c/fields/CourseName__c.field-meta.xml
<CustomField>
    <fullName>CourseName__c</fullName>
    <description>富士エコーで利用</description>
    <label>コース便</label>
    <length>255</length>
    <type>Text</type>
</CustomField>