force-app/main/default/objects/DispatchDetail__c/fields/DelayedMessage_F__c.field-meta.xml
<CustomField>
    <fullName>DelayedMessage_F__c</fullName>
    <description>注文の「遅延メッセージ」を表示</description>
    <formula>OrderHeader__r.DelayedMessage_F__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>遅延メッセージ</label>
    <type>Text</type>
</CustomField>