force-app/main/default/objects/DispatchDetail__c/fields/Destination_F__c.field-meta.xml
<CustomField>
    <fullName>Destination_F__c</fullName>
    <formula>OrderHeader__r.Destination__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>着地</label>
    <type>Text</type>
</CustomField>