force-app/main/default/objects/DispatchDetail__c/fields/DispatchDateTime__c.field-meta.xml
<CustomField>
    <fullName>DispatchDateTime__c</fullName>
    <description>ドライバー、自社車両 または、
下請け業者 入力したことによって、自動設定する</description>
    <label>配車日時</label>
    <type>DateTime</type>
</CustomField>