force-app/main/default/objects/DispatchDetail__c/fields/DispatchTableDownload__c.field-meta.xml
<CustomField>
    <fullName>DispatchTableDownload__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>配車表ダウンロード</label>
    <referenceTo>PrintHistory__c</referenceTo>
    <relationshipLabel>配車明細</relationshipLabel>
    <relationshipName>DispatchDetailList</relationshipName>
    <type>Lookup</type>
</CustomField>