force-app/main/default/objects/DispatchDetail__c/fields/DriverMaster__c.field-meta.xml
<CustomField>
    <fullName>DriverMaster__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>ドライバー</label>
    <referenceTo>DriverMaster__c</referenceTo>
    <relationshipLabel>配車明細</relationshipLabel>
    <relationshipName>DispatchDetailList</relationshipName>
    <type>Lookup</type>
</CustomField>