force-app/main/default/objects/DispatchDetail__c/fields/EngagementTime__c.field-meta.xml
<CustomField>
    <fullName>EngagementTime__c</fullName>
    <label>拘束時間</label>
    <length>255</length>
    <type>Text</type>
</CustomField>