force-app/main/default/objects/DispatchDetail__c/fields/ExpectedDeliveryDate_F__c.field-meta.xml
<CustomField>
    <fullName>ExpectedDeliveryDate_F__c</fullName>
    <formula>OrderHeader__r.ExpectedDeliveryDate__c</formula>
    <label>納品日</label>
    <type>Date</type>
</CustomField>