force-app/main/default/objects/DispatchDetail__c/fields/ExtraTimeCharge__c.field-meta.xml
<CustomField>
    <fullName>ExtraTimeCharge__c</fullName>
    <label>時間増し</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>