force-app/main/default/objects/DispatchDetail__c/fields/FirstPickingWarehouseMasterName_F__c.field-meta.xml
<CustomField>
    <fullName>FirstPickingWarehouseMasterName_F__c</fullName>
    <description>注文のFirstピッキングの倉庫の倉庫名を表示</description>
    <formula>OrderHeader__r.FirstWarehouseMaster__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Firstピッキング倉庫名</label>
    <type>Text</type>
</CustomField>