force-app/main/default/objects/DispatchDetail__c/fields/FuelCost__c.field-meta.xml
<CustomField>
    <fullName>FuelCost__c</fullName>
    <description>注文の「燃料費」の積み上げ項目を設定するため</description>
    <label>燃料費(手動)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>