force-app/main/default/objects/DispatchDetail__c/fields/FuelCost_F__c.field-meta.xml
<CustomField>
    <fullName>FuelCost_F__c</fullName>
    <formula>IF(
    /* 条件 */
    AND(
        NOT(ISBLANK(OrderHeader__r.Distance_F__c)),
        NOT(ISBLANK(OrderHeader__r.GasolinePriceMaster__c)),
        NOT(ISBLANK(OrderHeader__r.GasolinePriceMaster__r.Price__c)),
        NOT(ISBLANK(VehicleMaster__c)),
        NOT(ISBLANK(VehicleMaster__r.FuelEfficiency__c))
    ),
    OrderHeader__r.Distance_F__c/* km */
    / 
    VehicleMaster__r.FuelEfficiency__c /* km/L */
    *
    OrderHeader__r.GasolinePriceMaster__r.Price__c /* ￥/L */
    ,
    NULL
)</formula>
    <label>燃料費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>