force-app/main/default/objects/DispatchDetail__c/fields/InstructionsAndOthers__c.field-meta.xml
<CustomField>
    <fullName>InstructionsAndOthers__c</fullName>
    <label>指示・その他</label>
    <length>255</length>
    <type>Text</type>
</CustomField>