force-app/main/default/objects/DispatchDetail__c/fields/LoadingDate_F__c.field-meta.xml
<CustomField>
    <fullName>LoadingDate_F__c</fullName>
    <formula>OrderHeader__r.LoadingDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>積込日</label>
    <type>Date</type>
</CustomField>