force-app/main/default/objects/DispatchDetail__c/fields/LoadingPlaceChangedFlag_F__c.field-meta.xml
<CustomField>
    <fullName>LoadingPlaceChangedFlag_F__c</fullName>
    <description>Firstピッキング倉庫名と注文の倉庫名が一致しない場合、Trueを返す</description>
    <formula>IF( FirstPickingWarehouseMasterName_F__c != WarehouseMasterName_F__c, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>積込場所変更フラグ</label>
    <type>Checkbox</type>
</CustomField>