force-app/main/default/objects/DispatchDetail__c/fields/OriginPlace_F__c.field-meta.xml
<CustomField>
    <fullName>OriginPlace_F__c</fullName>
    <formula>OrderHeader__r.OriginPlace__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>発地</label>
    <type>Text</type>
</CustomField>