force-app/main/default/objects/DispatchDetail__c/fields/OverwriteDispatchDateTime__c.field-meta.xml
<CustomField>
    <fullName>OverwriteDispatchDateTime__c</fullName>
    <label>配車を上書き時間</label>
    <type>DateTime</type>
</CustomField>