force-app/main/default/objects/DispatchDetail__c/fields/PalletNumber_F__c.field-meta.xml
<CustomField>
    <fullName>PalletNumber_F__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>パレット数</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>