force-app/main/default/objects/DispatchDetail__c/fields/PickupRemarks__c.field-meta.xml
<CustomField>
    <fullName>PickupRemarks__c</fullName>
    <label>備考（引取り）</label>
    <type>TextArea</type>
</CustomField>