force-app/main/default/objects/DispatchDetail__c/fields/Subcontractor__c.field-meta.xml
<CustomField>
    <fullName>Subcontractor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>下請け業者</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>配車明細</relationshipLabel>
    <relationshipName>DispatchDetailList</relationshipName>
    <type>Lookup</type>
</CustomField>