force-app/main/default/objects/DispatchDetail__c/fields/SubcontractorFlag__c.field-meta.xml
<CustomField>
    <fullName>SubcontractorFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>下請け</label>
    <type>Checkbox</type>
</CustomField>