force-app/main/default/objects/DispatchDetail__c/fields/TotalFare__c.field-meta.xml
<CustomField>
    <fullName>TotalFare__c</fullName>
    <label>合計運賃</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>