force-app/main/default/objects/DispatchDetail__c/fields/UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueKey__c</fullName>
    <externalId>true</externalId>
    <label>一意キー（不要）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>