force-app/main/default/objects/DispatchDetail__c/fields/VehiclelNumber_F__c.field-meta.xml
<CustomField>
    <fullName>VehiclelNumber_F__c</fullName>
    <formula>IF (
  ISNULL(VehicleMaster__r.Name)
  , CharteredVehicleNumber__c
  , VehicleMaster__r.Name
)</formula>
    <label>車種・車番</label>
    <type>Text</type>
</CustomField>