force-app/main/default/objects/DispatchDetail__c/fields/VehicleMaster__c.field-meta.xml
<CustomField>
    <fullName>VehicleMaster__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>自社車両</label>
    <referenceTo>VehicleMaster__c</referenceTo>
    <relationshipLabel>配車明細</relationshipLabel>
    <relationshipName>DispatchDetailList</relationshipName>
    <type>Lookup</type>
</CustomField>