force-app/main/default/objects/DispatchDetail__c/fields/VehicleMaster_Name_F__c.field-meta.xml
<CustomField>
    <fullName>VehicleMaster_Name_F__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; +  Id , CourseName__c + &apos; &apos; + VehicleMaster__r.Name)</formula>
    <label>自社車両車番</label>
    <type>Text</type>
</CustomField>