force-app/main/default/objects/DispatchDetail__c/fields/WarehouseMasterName_F__c.field-meta.xml
<CustomField>
    <fullName>WarehouseMasterName_F__c</fullName>
    <formula>OrderHeader__r.WarehouseMasterName__c</formula>
    <label>倉庫名</label>
    <type>Text</type>
</CustomField>