force-app/main/default/objects/DispatchDetail__c/validationRules/CannotSaveCharteredVehicleNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotSaveCharteredVehicleNumber</fullName>
    <active>true</active>
    <errorConditionFormula>/* 判定条件 */ 
NOT( ISBLANK( CharteredVehicleNumber__c ) || CharteredVehicleNumber__c == &apos;9999&apos;) 
&amp;&amp;
/* 判定項目 */
ISBLANK(  Subcontractor__c )</errorConditionFormula>
    <errorMessage>「傭車車両」を入力する場合、「下請け業者」、「下請け」を入力してください。</errorMessage>
</ValidationRule>