force-app/main/default/objects/DispatchDetail__c/validationRules/CheckSubcontractorFlag.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckSubcontractorFlag</fullName>
    <active>true</active>
    <description>注文の下請け運賃が未入力の場合、配車明細の下請けをチェックできない</description>
    <errorConditionFormula>/* 判定条件 */ 
ISBLANK( OrderHeader__r.SubcontractFee__c ) 
&amp;&amp;
/* 判定項目 */
 SubcontractorFlag__c</errorConditionFormula>
    <errorDisplayField>SubcontractorFlag__c</errorDisplayField>
    <errorMessage>注文の「下請け運賃」を入力してください。</errorMessage>
</ValidationRule>