force-app/main/default/objects/DispatchDetail__c/validationRules/SubcontractorFlagFalse.validationRule-meta.xml
<ValidationRule>
    <fullName>SubcontractorFlagFalse</fullName>
    <active>true</active>
    <errorConditionFormula>/* 判定条件 */ 
NOT(ISBLANK(Subcontractor__c))
&amp;&amp;
/* 判定項目 */
SubcontractorFlag__c = FALSE</errorConditionFormula>
    <errorMessage>「下請け業者」を設定する場合、「下請け」をチェックしてください。</errorMessage>
</ValidationRule>