force-app/main/default/objects/DispatchDetail__c/validationRules/SubcontractorFlagTrue.validationRule-meta.xml
<ValidationRule>
    <fullName>SubcontractorFlagTrue</fullName>
    <active>true</active>
    <errorConditionFormula>/* 判定条件 */ 
 ( NOT(ISBLANK(DriverMaster__c) ) 
&amp;&amp;
NOT(ISBLANK(VehicleMaster__c)) )
&amp;&amp;
/* 判定項目 */
SubcontractorFlag__c = TRUE</errorConditionFormula>
    <errorMessage>「自社ドライバー」を設定する場合、「下請け」をチェックできません。</errorMessage>
</ValidationRule>