force-app/main/default/objects/DispatchDetail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AccountName_F__c</columns>
    <columns>InstructionsAndOthers__c</columns>
    <columns>SubcontractorFlag__c</columns>
    <columns>Destination_F__c</columns>
    <columns>OriginPlace_F__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>